# Advent-of-Code-2022

./: Cargo.toml
day-01/: Cargo.toml
day-01/src/: main.rs
day-02/: Cargo.toml
day-02/src/: main.rs
day-03/: Cargo.toml
day-03/src/: main.rs
day-04/: Cargo.toml
day-04/src/: main.rs
day-05/: Cargo.toml
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
